# wiki2md

./: .gitignore  pyproject.toml  readme.md
src/wiki2md/: cli.py
